<resources>
    <string name="app_name">ConnectMeApp</string>
    <string name="Welcome">Welcome!</string>
    <string name="login_message">We\'re happy to see you. Please login to continue.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>

    <string name="or_continue_with">or continue with</string>
    <string name="register"> Register</string>
    <string name="great">Great!</string>
    <string name="register_msg">We\'re so excited to get you onboard!</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="register_icon_desc">Register Screen Icon</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="terms_privacy">By clicking Agree and continue below, I agree to</string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="and">and</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_fourth_screen">FourthScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="a_place_for_all_your_questions">A place for all your questions</string>
    <string name="my_community">My Community</string>
    <string name="search_screen">Search Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="search_dms">Search DMs</string>
    <string name="no_requests_yet">No Requests Yet</string>
    <string name="search_for_users">Search for users</string>
    <string name="new_message">New Message</string>
    <string name="hello">Hello!</string>
    <string name="_12_30_pm">12:30 PM</string>
    <string name="view_profile">View Profile</string>
    <string name="typing">Typing...</string>
    <string name="_00_00">00:00</string>
    <string name="following">Following</string>
    <string name="_180">180</string>
    <string name="followers">Followers</string>
    <string name="_1_2k">1.2K</string>
    <string name="posts">Posts</string>
    <string name="_5">5</string>
    <string name="this_is_my_bio">This is my bio...</string>
    <string name="my_profile">My Profile</string>
    <string name="search_following">Search Following</string>
    <string name="token">007eJxTYJj6/OnupdOCy364RohUV3Uc83g8K6jy4vyHalmFS+9f+fROgcEo1cIsLTnNwMAoxcwk1TAtydQwJcXIwjTZ0tLIzMA08YnXvfSGQEaGqhOZjIwMEAji8zA45+flpSaX+KY6FhQwMAAArhkmmQ==</string>
    <string name="appid">2e86fcf002d64e1fb51dd285c992605a</string>
    <string name="channel">ConnectMeApp</string>
</resources>