<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item

        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/nav_search_selector"
        android:title="@string/search" />

    <!-- ✅ Post icon will stay unchanged (No selection effect) -->
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/plus_nav_icon"
        android:title=""
        android:checkable="false"/>  <!-- This prevents selection behavior -->

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/nav_profile_selector"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/nav_contacts_selector"
        android:title="@string/contacts" />
</menu>
