<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <!-- Logo (Centered) -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@drawable/connectme_logo_2" />

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/great"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/register_msg"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp" />

        <!--Name-->
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <!-- Username -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <!-- Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/dark_brown"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

<!--        Terms and Policy-->
        <TextView
            android:id="@+id/before_Tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_privacy"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/terms_of_service"
                android:textColor="@color/dark_brown"
                android:textSize="14sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/and"
                android:layout_toEndOf="@+id/tos"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@+id/and"
                android:text="@string/privacy_policy"
                android:textColor="@color/dark_brown"
                android:textStyle="bold"
                android:textSize="14sp" />
        </RelativeLayout>
        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_bg_shp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@null" />





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="60dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/already_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/register_text"
                android:text="@string/login"
                android:textColor="@color/dark_brown"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
